formated stoplight and clock to not overlap

--- a/css/main.css
+++ b/css/main.css
@@ -36,14 +36,19 @@ h1 {
 	height: 100%;
 	background-color: black;
 }
+/*.gameFunctions{
+	width: 100%;
+}*/
 .clock {
 	color: lawngreen;
 	font-size: 400%;
+	display: inline-block;
 }
 
 .stopLight {
 	height: 20%;
 	width: 10%;
+	display: inline-block;
 	background-color: grey;
 }
 .redLight {
